Fixes letter animation on Safari

--- a/themes/supersimple/assets/styles/header.scss
+++ b/themes/supersimple/assets/styles/header.scss
@@ -73,7 +73,7 @@ header {
                                 animation-name: slide-up-kf;
                                 animation-direction: reverse;
                                 animation-duration: 0.7s;
-                                animation-timing-function: cubic-bezier(0.190, 1.000, 0.065, 1.000);
+                                animation-timing-function: cubic-bezier(1.00, 0.065, 1.00, 0.190);
                                 animation-fill-mode: forwards;
                                 animation-delay: calc(var(--index) * 50ms);
 
